hphp/hack/test/typecheck/reactive/mutability_flavors9.php.exp
File "mutability_flavors9.php", line 9, characters 3-4:
Cannot assign mutable value to immutable local variable. Mutability flavor of local variable cannot be altered. (Typing[4294])
